DDD Aggregates, java 17, YmlParser, remove old parsers, turn off isDone, isArchived, cleanup